Unit_2_C_Programming/Lesson 3 C Basics/Assignment 2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:18:44 **** Rebuild of configuration Debug for project EX8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:40:14: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  int i = 2+(2,3,4);
              ^
..\main.c:40:16: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  int i = 2+(2,3,4);
                ^
..\main.c:41:16: error: expected ';' before '}' token
  printf("%d",i)
                ^
                ;
 }
 ~               
02:18:50 **** Incremental Build of configuration Debug for project EX8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:40:14: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  int i = 2+(2,3,4);
              ^
..\main.c:40:16: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  int i = 2+(2,3,4);
                ^
gcc -o EX8.exe main.o 
00:10:55 **** Incremental Build of configuration Debug for project EX8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX8.exe main.o 
